Fixed menu overflow

--- a/src/sass/components/_menu-mobile.scss
+++ b/src/sass/components/_menu-mobile.scss
@@ -38,7 +38,7 @@
 }
 
 .header__menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 20;
